# qt_homework2

./: CMakeLists.txt  main.cpp
